--- a/k8s/dongfeng-core-proxy-deployment.yaml
+++ b/k8s/dongfeng-core-proxy-deployment.yaml
@@ -25,23 +25,10 @@ spec:
         env:
         - name: MICRO_REGISTRY
           value: kubernetes
-        - name: MH_ENVIROMENT
-          value: dev
+        - name: DF_ENVIROMENT
+          value: dev        
         - name: MICRO_SERVER_ADDRESS
-          value: 0.0.0.0:9091
+          value: 0.0.0.0:80
         ports:
-          - containerPort: 9091
-      - name: liveness
-        command: [
-          "/health",
-          "--health_address=0.0.0.0:8080",
-          "--server_name=dongfeng.svc.core.server.api",
-          "--server_address=0.0.0.0:9091",
-        ]
-        image: ilovelili/micro-health:latest
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8080
-          initialDelaySeconds: 3
-          periodSeconds: 3
+        - containerPort: 80
+          name: api-port
