--- a/k8s/dongfeng-core-proxy-service.yaml
+++ b/k8s/dongfeng-core-proxy-service.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: dongfeng-back
   name: dongfeng-core-proxy
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - name: api-port
     port: 80
