--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,16 +22,20 @@
 
 
 [[constraint]]
-  name = "github.com/boj/redistore"
-  version = "1.2.0"
-
-[[constraint]]
   name = "github.com/emicklei/go-restful"
   version = "2.8.0"
 
 [[constraint]]
+  name = "github.com/go-redis/redis"
+  version = "6.14.2"
+
+[[constraint]]
   name = "github.com/golang/protobuf"
   version = "1.2.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/ilovelili/digital-ocean-client"
 
 [[constraint]]
   branch = "master"
@@ -51,12 +55,16 @@
 
 [[constraint]]
   name = "github.com/micro/go-micro"
-  version = "0.12.0"
+  version = "0.14.1"
 
 [[constraint]]
   name = "github.com/micro/go-plugins"
-  version = "0.15.0"
+  version = "0.16.1"
 
 [[constraint]]
   name = "github.com/micro/go-web"
   version = "0.4.0"
+
+[[constraint]]
+  name = "github.com/segmentio/ksuid"
+  version = "1.0.2"
