add recipe upload

--- a/services/server/config.example.json
+++ b/services/server/config.example.json
@@ -21,7 +21,8 @@
         "core_proxy": "dongfeng.svc.core.proxy.api",
         "core_server": "dongfeng.svc.core.server.api",
         "attendance_server": "dongfeng.svc.attendance.server.api",
-        "physique_server": "dongfeng.svc.physique.server.api"
+        "physique_server": "dongfeng.svc.physique.server.api",
+        "nutrition_server": "dongfeng.svc.nutrition.server.api"
     },
     "servicemeta": {
         "registry_ttl": 30,
